--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "firebase": "^7.21.1",
     "md5": "^2.3.0",
+    "mime-types": "^2.1.27",
     "moment": "^2.29.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -19,7 +20,9 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^1.3.0"
+    "semantic-ui-react": "^1.3.0",
+    "use-state-with-callback": "^2.0.3",
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
