--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.29.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-avatar-editor": "11.0.9",
     "react-color": "2.17.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
